MET-7039 address sonar recomendations